--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,4 +5,5 @@ html {
   @apply bg-gradient-to-b from-gray-900 to-slate-900;
   font-family: "DM Sans", sans-serif;
   font-optical-sizing: auto;
+  scroll-behavior: smooth;
 }
